version/0.25/_sources/api/solver/_autosummary/settings/premix_heat_trans_coeff.rst.txt
:orphan:

.. _premix_heat_trans_coeff:

premix_heat_trans_coeff
=======================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.premix_heat_trans_coeff.premix_heat_trans_coeff
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================================

Attribute                                                                Summary

=========================   ====================================================
:ref:`option <option_12>`       Select method for calculating material property.

:ref:`value <value_11>`                     Specify the constant property value.

=========================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

